--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@vercel/react-router": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
